# Vision-UR5-Deep-RL

./: README.md
DDPG - Code/C++ Code/: CMakeLists.txt
DDPG - Code/C++ Code/src/: gazebo_interface.cpp  main.cpp
DDPG - Code/lua_files/: DeepPolicyGradientLearner.lua
DDPG - Code/robot_model/: Readme
DDPG - Code/robot_model/base_stand/: model.config  model.sdf
DDPG - Code/robot_model/plugins/: gazebo_ros_camera.cpp  hello_world.cpp  joint_angles.proto  joint_controller.cpp  joint_publisher.cpp
DDPG - Code/robot_model/robot_model/: model.sdf
DDPG - Code/robot_model/ur5/: model.config  model.sdf
DDPG - Code/robot_model/worlds/: my_world1.world  my_world2.world  my_world3.world
